# whoa

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/linux/: Whoa.cpp  Wowre.cpp
src/app/mac/: EngineGLLayerView.h  EngineGLLayerView.mm  EngineMTLLayerView.h  EngineMTLLayerView.mm  MacClient.h  MacClient.mm  Main.xib  MainApp.h  MainApp.mm  MainMenu.xib  View.h  View.mm  Whoa.mm  WindowCallbacks.h  WindowCallbacks.mm  WoWApplication.h  WoWApplication.mm
src/async/: AsyncFile.cpp  AsyncFile.hpp  AsyncFileRead.cpp  AsyncFileRead.hpp  CAsyncObject.hpp  CAsyncQueue.hpp  CAsyncThread.hpp  CMakeLists.txt
src/client/: CMakeLists.txt  Client.cpp  Client.hpp  ClientHandlers.cpp  ClientHandlers.hpp  ClientRealmResponseAdapter.cpp  ClientRealmResponseAdapter.hpp  ClientServices.cpp  ClientServices.hpp  CmdLine.cpp  CmdLine.hpp  Console.cpp  Console.hpp  Gui.hpp  ObjMgr.cpp  ObjMgr.hpp  Util.cpp  Util.hpp
src/component/: CCharacterComponent.cpp  CCharacterComponent.hpp  CMakeLists.txt  ComponentData.cpp  ComponentData.hpp  Texture.cpp  Texture.hpp  Types.hpp  Util.cpp  Util.hpp
src/console/: CMakeLists.txt  CVar.cpp  CVar.hpp  CVarHandlers.cpp  CVarHandlers.hpp  Client.cpp  Client.hpp  Command.cpp  Command.hpp  CommandHandlers.cpp  CommandHandlers.hpp  Console.cpp  Console.hpp  Detect.cpp  Detect.hpp  Device.cpp  Device.hpp  EventHandlers.cpp  EventHandlers.hpp  Handlers.cpp  Handlers.hpp  Initialize.cpp  Initialize.hpp  Line.cpp  Line.hpp  Screen.cpp  Screen.hpp  Types.hpp
src/db/: CMakeLists.txt  Db.cpp  Db.hpp  IDatabase.hpp  WowClientDB.hpp  WowClientDB_Base.hpp  WowClientDB_Common.hpp
src/event/: CEvent.cpp  CEvent.hpp  CMakeLists.txt  CObserver.hpp  Context.cpp  Context.hpp  Event.cpp  Event.hpp  EvtContext.cpp  EvtContext.hpp  EvtHandler.hpp  EvtKeyDown.hpp  EvtMessage.hpp  EvtThread.cpp  EvtThread.hpp  EvtTimer.hpp  Input.cpp  Input.hpp  Queue.cpp  Queue.hpp  Scheduler.cpp  Scheduler.hpp  Synthesize.cpp  Synthesize.hpp  Timer.cpp  Timer.hpp  Types.hpp  Window.hpp
src/ffx/: CMakeLists.txt  Effect.hpp  EffectDeath.cpp  EffectDeath.hpp  EffectGlow.cpp  EffectGlow.hpp
src/glue/: CCharacterComponent.cpp  CCharacterComponent.hpp  CCharacterCreation.cpp  CCharacterCreation.hpp  CCharacterCreationScript.cpp  CCharacterCreationScript.hpp  CCharacterSelection.cpp  CCharacterSelection.hpp  CCharacterSelectionScript.cpp  CCharacterSelectionScript.hpp  CGlueLoading.cpp  CGlueLoading.hpp  CGlueMgr.cpp  CGlueMgr.hpp  CMakeLists.txt  CRealmList.cpp  CRealmList.hpp  CRealmListScript.cpp  CRealmListScript.hpp  Character.cpp  Character.hpp  CharacterSelectionDisplay.cpp  CharacterSelectionDisplay.hpp  GlueScript.cpp  GlueScript.hpp  GlueScriptEvents.cpp  GlueScriptEvents.hpp  LoadingScreen.cpp  LoadingScreen.hpp  Types.hpp
src/gx/: Adapter.cpp  Adapter.hpp  Blit.cpp  Blit.hpp  Blp.hpp  Buffer.cpp  Buffer.hpp  CCamera.cpp  CCamera.hpp  CGxBatch.hpp  CGxCaps.hpp  CGxDevice.cpp  CGxDevice.hpp  CGxFormat.cpp  CGxFormat.hpp  CGxMatrixStack.cpp  CGxMatrixStack.hpp  CGxMonitorMode.cpp  CGxMonitorMode.hpp  CGxStateBom.cpp  CGxStateBom.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Coordinate.cpp  Coordinate.hpp  Device.cpp  Device.hpp  Draw.cpp  Draw.hpp  Font.cpp  Font.hpp  FontInternal.cpp  FontInternal.hpp  Gx.cpp  Gx.hpp  LoadingScreen.cpp  LoadingScreen.hpp  RenderState.cpp  RenderState.hpp  (+13 more)
src/math/: CMakeLists.txt  Types.cpp  Types.hpp  Utils.hpp
src/model/: CM2Cache.cpp  CM2Cache.hpp  CM2Light.cpp  CM2Light.hpp  CM2Lighting.cpp  CM2Lighting.hpp  CM2Model.cpp  CM2Model.hpp  CM2Scene.cpp  CM2Scene.hpp  CM2SceneRender.cpp  CM2SceneRender.hpp  CM2Shared.cpp  CM2Shared.hpp  CMakeLists.txt  M2Animate.hpp  M2Data.hpp  M2Init.cpp  M2Init.hpp  M2Internal.cpp  M2Internal.hpp  M2Model.hpp  M2Sort.cpp  M2Sort.hpp  M2Types.hpp  Model2.cpp  Model2.hpp
src/net/: CMakeLists.txt  Connection.hpp  Grunt.hpp  Login.hpp  Poll.cpp  Poll.hpp  Types.hpp
src/object/: CMakeLists.txt  Client.hpp  Types.hpp
src/os/: Compat.hpp
src/sound/: CMakeLists.txt  CVarHandlers.cpp  CVarHandlers.hpp  Interface.hpp  SEChannelGroup.hpp  SESound.cpp  SESound.hpp  SESoundInternal.cpp  SESoundInternal.hpp  SEUserData.hpp  SI2.cpp  SI2.hpp  SI2Script.cpp  SI2Script.hpp  SI2USERDATA.hpp  SOUNDKITDEF.hpp  SOUNDKITLOOKUP.hpp  SOUNDKITOBJECT.hpp  SoundKitProperties.cpp  SoundKitProperties.hpp
src/ui/: CBackdropGenerator.cpp  CBackdropGenerator.hpp  CFramePoint.cpp  CFramePoint.hpp  CFrameStrata.cpp  CFrameStrata.hpp  CLayoutFrame.cpp  CLayoutFrame.hpp  CMakeLists.txt  CObserver.hpp  CRenderBatch.cpp  CRenderBatch.hpp  CScriptObject.cpp  CScriptObject.hpp  CScriptObjectScript.cpp  CScriptObjectScript.hpp  CScriptRegion.cpp  CScriptRegion.hpp  CScriptRegionScript.cpp  CScriptRegionScript.hpp  CSimpleButton.cpp  CSimpleButton.hpp  CSimpleButtonScript.cpp  CSimpleButtonScript.hpp  CSimpleCheckbox.cpp  CSimpleCheckbox.hpp  CSimpleCheckboxScript.cpp  CSimpleCheckboxScript.hpp  CSimpleEditBox.cpp  CSimpleEditBox.hpp  CSimpleEditBoxScript.cpp  CSimpleEditBoxScript.hpp  CSimpleFont.cpp  CSimpleFont.hpp  CSimpleFontScript.cpp  CSimpleFontScript.hpp  CSimpleFontString.cpp  CSimpleFontString.hpp  CSimpleFontStringAttributes.cpp  CSimpleFontStringAttributes.hpp  (+75 more)
src/util/: Autorelease.hpp  Autorelease.mm  BlizzardCore.cpp  BlizzardCore.hpp  Byte.hpp  C3Spline.cpp  C3Spline.hpp  CHashKeyGUID.cpp  CHashKeyGUID.hpp  CMakeLists.txt  CStatus.cpp  CStatus.hpp  CVar.cpp  CVar.hpp  DataStore.cpp  DataStore.hpp  Filesystem.cpp  Filesystem.hpp  GUID.hpp  HMAC.cpp  HMAC.hpp  Locale.cpp  Locale.hpp  Log.cpp  Log.hpp  Lua.hpp  Mpq.cpp  Mpq.hpp  Random.cpp  Random.hpp  SFile.cpp  SFile.hpp  SmartGUID.cpp  SmartGUID.hpp  StringTo.cpp  StringTo.hpp  Time.hpp  Unimplemented.hpp  Zlib.cpp  Zlib.hpp
src/world/: CMakeLists.txt  CWorld.cpp  CWorld.hpp  CWorldParam.cpp  CWorldParam.hpp  Map.hpp  Types.hpp  Weather.cpp  Weather.hpp  World.hpp
test/: CMakeLists.txt  Test.cpp
test/fixture/: README.md
test/gx/: CCamera.cpp
test/stub/: Mac.mm
(+518 files in other folders)
