add_subdirectory(app)
add_subdirectory(async)
add_subdirectory(client)
add_subdirectory(console)
add_subdirectory(db)
add_subdirectory(event)
add_subdirectory(glue)
add_subdirectory(gx)
add_subdirectory(math)
add_subdirectory(model)
add_subdirectory(net)
add_subdirectory(object)
add_subdirectory(sound)
add_subdirectory(ui)
add_subdirectory(util)
add_subdirectory(world)
